@@ -4,6 +4,8 @@ Changes in 0.80.0:
       replaced. Instead of rigidly following the trove digraph, we flatten
       the update to choose how troves get updated, and walk the hierarchy
       to determine which updates to actually apply.
+    * Dependency resolution could include troves which caused duplicate 
+      removals for the troves those included troves replace
 
 Changes in 0.71.2
   o Client Changes:
